feat(ui): Finaliza UX/UI e lógica de Modais
Implementa:
- Design Glassmorphism.
- Lógica de modal de edição com dirty check (aviso de descarte).
- Barra de busca funcional.
- Botão de menu '...' fixo (sem conflitos com o arraste).

--- a/backend/tasks.json
+++ b/backend/tasks.json
@@ -1,14 +1,43 @@
 {
-  "2e69138c-7d19-4824-b4a1-38b3c705789a": {
-    "id": "2e69138c-7d19-4824-b4a1-38b3c705789a",
-    "title": "Minha Tarefa para Testar",
-    "description": "Vou atualizar e deletar essa",
+  "0d025ca8-a71c-44fc-a561-f65fb0965f65": {
+    "id": "0d025ca8-a71c-44fc-a561-f65fb0965f65",
+    "title": "teste3",
+    "status": "Em Progresso"
+  },
+  "4246c702-8e1a-4166-9ffb-d9ab3b9972d1": {
+    "id": "4246c702-8e1a-4166-9ffb-d9ab3b9972d1",
+    "title": "dfgybhnjm",
+    "description": "dcfvgbhsssssh",
     "status": "A Fazer"
   },
-  "be56b03f-7816-4a50-a181-8991d254c2bf": {
-    "id": "be56b03f-7816-4a50-a181-8991d254c2bf",
-    "title": "Minha Tarefa para Testar",
-    "description": "Vou atualizar e deletar essa",
+  "451f46ff-2bd4-4e4f-b0fd-4ce76335195a": {
+    "id": "451f46ff-2bd4-4e4f-b0fd-4ce76335195a",
+    "title": "kmmm",
+    "description": "kkkkk",
+    "status": "Concluídas"
+  },
+  "98debe9e-8b76-483d-a151-4cf6a730bfca": {
+    "id": "98debe9e-8b76-483d-a151-4cf6a730bfca",
+    "title": "oi",
+    "description": "asdas",
+    "status": "Concluídas"
+  },
+  "e50f55ff-7854-444f-8251-85ac849b3ae3": {
+    "id": "e50f55ff-7854-444f-8251-85ac849b3ae3",
+    "title": "testando",
+    "description": "sd",
     "status": "A Fazer"
+  },
+  "e705cf13-51ef-4a61-ac86-0d2f95d1921e": {
+    "id": "e705cf13-51ef-4a61-ac86-0d2f95d1921e",
+    "title": "oiiids",
+    "description": "oii\nhg",
+    "status": "Em Progresso"
+  },
+  "e722105c-4f25-457d-a8e6-01f7a20f05a9": {
+    "id": "e722105c-4f25-457d-a8e6-01f7a20f05a9",
+    "title": "SDFVGBHN",
+    "description": "SDFVGBHN",
+    "status": "Concluídas"
   }
 }
